aks-poland-central/apps/jitsi/jitsi.yaml

# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitsi-meet
  namespace: jitsi
  labels:
    app.kubernetes.io/name: jitsi-meet
    app.kubernetes.io/instance: jitsi
    app.kubernetes.io/component: web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - secretName: jitsi-secret
    hosts:
    - jitsi.aks-poland-central.stunner.cc # Change this to your domain
  rules:
  - host: jitsi.aks-poland-central.stunner.cc # Change this to your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jitsi-meet
            port:
              number: 80
---

# Jitsi web
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jitsi-web
  namespace: jitsi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jitsi-meet
      app.kubernetes.io/instance: jitsi
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jitsi-meet
        app.kubernetes.io/instance: jitsi
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: jitsi-meet
          image: "jitsi/web:stable-7882"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config-volume
              mountPath: /config/custom-config.js
              subPath: custom-config.js
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
      volumes:
        - name: config-volume
          configMap:
            name: jitsi-meet-config
---
apiVersion: v1
kind: Service
metadata:
  name: jitsi-meet
  namespace: jitsi
  labels:
    app.kubernetes.io/name: jitsi-meet
    app.kubernetes.io/instance: jitsi
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: jitsi-meet
    app.kubernetes.io/instance: jitsi
    app.kubernetes.io/component: web
---

# Prosody
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jitsi-prosody
  namespace: jitsi
  labels:
    app.kubernetes.io/name: prosody
    app.kubernetes.io/instance: jitsi
spec:
  serviceName: "prosody"
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prosody
      app.kubernetes.io/instance: jitsi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prosody
        app.kubernetes.io/instance: jitsi
    spec:
      containers:
        - name: prosody
          image: "l7mp/jitsi-prosody"
          imagePullPolicy: IfNotPresent
          ports:
            - name: xmpp-c2s
              containerPort: 5222
              protocol: TCP
            - name: xmpp-s2s
              containerPort: 5269
              protocol: TCP
            - name: xmpp-component
              containerPort: 5347
              protocol: TCP
            - name: bosh-insecure
              containerPort: 5280
              protocol: TCP
            - name: bosh-secure
              containerPort: 5281
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /http-bind
              port: bosh-insecure
          readinessProbe:
            httpGet:
              path: /http-bind
              port: bosh-insecure
          volumeMounts:
          - name: prosody-data
            mountPath: /config/data
      volumes:
      - name: prosody-data
        persistentVolumeClaim:
          claimName: prosody-data
  volumeClaimTemplates:
  - metadata:
      name: prosody-data
    spec:
      accessModes:
        - ReadWriteOnce
      volumeMode: Filesystem
      resources:
        requests:
          storage: 3G
---
apiVersion: v1
kind: Service
metadata:
  name: jitsi-prosody
  namespace: jitsi
  labels:
    app.kubernetes.io/name: prosody
    app.kubernetes.io/instance: jitsi
spec:
  clusterIP: None
  ports:
    - port: 5280
      protocol: TCP
      name: tcp-bosh-insecure
    - port: 5281
      protocol: TCP
      name: tcp-bosh-secure
    - port: 5347
      protocol: TCP
      name: tcp-xmpp-component
    - port: 5222
      protocol: TCP
      name: tcp-xmpp-c2
    - port: 5269
      protocol: TCP
      name: tcp-xmpp-s2
  selector:
    app.kubernetes.io/name: prosody
    app.kubernetes.io/instance: jitsi
---

# Jicofo
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jitsi-jicofo
  namespace: jitsi
  labels:
    app.kubernetes.io/name: jitsi-meet
    app.kubernetes.io/instance: jitsi
    app.kubernetes.io/component: jicofo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jitsi-meet
      app.kubernetes.io/instance: jitsi
      app.kubernetes.io/component: jicofo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jitsi-meet
        app.kubernetes.io/instance: jitsi
        app.kubernetes.io/component: jicofo
    spec:
      containers:
        - name: jitsi-meet
          image: "jitsi/jicofo:stable-7830"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8888
          readinessProbe:
            tcpSocket:
              port: 8888
---

# JVB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jitsi-jvb
  namespace: jitsi
  labels:
    app.kubernetes.io/name: jitsi-meet
    app.kubernetes.io/instance: jitsi
    app.kubernetes.io/component: jvb
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jitsi-meet
      app.kubernetes.io/instance: jitsi
      app.kubernetes.io/component: jvb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jitsi-meet
        app.kubernetes.io/instance: jitsi
        app.kubernetes.io/component: jvb
    spec:
      containers:
        - name: jitsi-meet
          image: "jitsi/jvb:stable-7830"
          imagePullPolicy: IfNotPresent
          ports:
            - name: rtp-udp
              containerPort: 10000
              protocol: UDP
          livenessProbe:
            httpGet:
              path: /about/health
              port: 8080
          readinessProbe:
            httpGet:
              path: /about/health
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jitsi-jvb
  namespace: jitsi
  labels:
    app.kubernetes.io/name: jitsi-meet
    app.kubernetes.io/instance: jitsi
    app.kubernetes.io/component: jvb
spec:
  type: ClusterIP
  ports:
    - port: 10000
      protocol: UDP
      name: rtp-udp
      targetPort: 10000
  selector:
    app.kubernetes.io/name: jitsi-meet
    app.kubernetes.io/instance: jitsi
    app.kubernetes.io/component: jvb
